--- a/sample/.settings/org.eclipse.wst.common.component
+++ b/sample/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="tinyejb-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/tinyejb/tinyejb">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/tinyejbweb/target/classes"/>
         <property name="context-root" value="tinyejb-sample"/>
     </wb-module>
